WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285988
[GStreamer] Deadlock when rendering frames to canvas
https://bugs.webkit.org/show_bug.cgi?id=285988
Summary
[GStreamer] Deadlock when rendering frames to canvas
Philippe Normand
Reported
2025-01-15 05:09:48 PST
This is exposed in the mediastream tests, in debug builds, specially when OffscreenCanvas is involved...
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-15 05:20:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39075
EWS
Comment 2
2025-01-16 03:37:17 PST
Committed
289000@main
(fe0e185d178c): <
https://commits.webkit.org/289000@main
> Reviewed commits have been landed. Closing PR #39075 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-16 03:38:16 PST
<
rdar://problem/143039031
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug