[GStreamer] Deadlock when rendering frames to canvas https://bugs.webkit.org/show_bug.cgi?id=285988

Reviewed by Xabier Rodriguez-Calvar.

Release the player sample mutex before doing a potential conversion and rendering, otherwise another
thread might attempt to lock it while the conversion is sill on-going, leading to deadlocks. The
video frame converter also now times out after waiting 200ms on the pipeline, otherwise it might get
stuck forever, leading to potential zombie WebProcesses.

This was manually tested on a Debug build, with the mediastream tests.

* Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp:
(WebCore::GStreamerVideoFrameConverter::convert):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::paint):

Canonical link: https://commits.webkit.org/289000@main