Source/WebCore/platform/graphics/gstreamer/GStreamerVideoFrameConverter.cpp
@@ -87,8 +87,12 @@ GRefPtr<GstSample> GStreamerVideoFrameConverter::convert(const GRefPtr<GstSample
     gst_app_src_push_sample(GST_APP_SRC_CAST(m_src.get()), sample.get());
 
     auto bus = adoptGRef(gst_element_get_bus(m_pipeline.get()));
-    auto message = adoptGRef(gst_bus_timed_pop_filtered(bus.get(), GST_CLOCK_TIME_NONE, static_cast<GstMessageType>(GST_MESSAGE_ERROR | GST_MESSAGE_ASYNC_DONE)));
-    RELEASE_ASSERT(message);
+    auto message = adoptGRef(gst_bus_timed_pop_filtered(bus.get(), 200 * GST_MSECOND, static_cast<GstMessageType>(GST_MESSAGE_ERROR | GST_MESSAGE_ASYNC_DONE)));
+    if (!message) {
+        GST_ERROR_OBJECT(m_pipeline.get(), "Video frame conversion 200ms timeout expired.");
+        return nullptr;
+    }
+
     if (GST_MESSAGE_TYPE(message.get()) == GST_MESSAGE_ERROR) {
         GST_ERROR_OBJECT(m_pipeline.get(), "Unable to convert video frame. Error: %" GST_PTR_FORMAT, message.get());
         return nullptr;
